# DynCA

./: .clang-format  .gitignore  CMakeLists.txt  CONFIGURATION.md  LICENSE.md  README.md  default.conf.json
3rd/cadical/: CMakeLists.txt  download.sh
experimental_results/: Results_of_DynCA_and_its_Alternative_Versions_on_Evaluation_Set.csv  Results_of_DynCA_and_its_Alternative_Versions_on_Training_Set.csv  Results_of_DynCA_and_its_SOTA_Competitors_on_Evaluation_Set.csv  Results_of_DynCA_and_its_SOTA_Competitors_on_Training_Set.csv
src/: covering_array.cpp  covering_array.hpp  main.cpp
src/cli/: args.cpp  args.hpp
src/expandor/: expandor.cpp  expandor.hpp  optimizer.cpp  optimizer.hpp  optimizer_hsca.cpp  optimizer_hsca.hpp  optimizer_scalable.cpp  optimizer_scalable.hpp  solvers.hpp
src/generator/: cdclcasampler.cpp  cdclcasampler.h  pboccsatsolver.cpp  pboccsatsolver.h  samplingca.hpp
src/io/: base.hpp  casa.cpp  casa.hpp  cnf.cpp  cnf.hpp  ctw.cpp  ctw.hpp  ctw_converter.cpp  ddnnf.cpp  ddnnf.hpp
src/util/: bitset.hpp  cpp23views.h  interrupt.hpp  intrusive_list.h  logger.hpp  random.hpp
tools/: check_tuples.cpp  convert_ca_casa.cpp  convert_ca_cnf.cpp  convert_casa.cpp  convert_cnf.cpp
